# TermDeck

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS
src/: App.svelte  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: DockDialog.svelte  Icon.svelte  NameDialog.svelte  SettingsDialog.svelte  ShortcutOverlay.svelte  TerminalPane.svelte
src/lib/: settings.test.ts  settings.ts  terminal-cwd.test.ts  terminal-cwd.ts  terminal-history-osc.test.ts  terminal-retention.test.ts  terminal-retention.ts  types.ts  workspaces.test.ts  workspaces.ts
